[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud_script"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud_script")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="Root"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 56.0

[node name="ModeLabel" type="Label" parent="Root/TopBar"]
text = "Level 1"

[node name="Spacer" type="Control" parent="Root/TopBar"]
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="Root/TopBar"]
text = "Score: 0"

[node name="AmmoLabel" type="Label" parent="Root/TopBar"]
text = "Ammo: 0/0"

[node name="Controls" type="Control" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftZone" type="ColorRect" parent="Root/Controls"]
layout_mode = 1
anchors_preset = 7
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.2, 0.35, 0.16)
mouse_filter = 1

[node name="RightZone" type="ColorRect" parent="Root/Controls"]
layout_mode = 1
anchors_preset = 9
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.35, 0.2, 0.15, 0.16)
mouse_filter = 1

[node name="ExtraBulletPrompt" type="Panel" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -115.0
offset_right = 170.0
offset_bottom = 130.0

[node name="VBoxContainer" type="VBoxContainer" parent="Root/ExtraBulletPrompt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Root/ExtraBulletPrompt/VBoxContainer"]
text = "Out of ammo\nWatch ad for +1 bullet"
horizontal_alignment = 1

[node name="WatchAdButton" type="Button" parent="Root/ExtraBulletPrompt/VBoxContainer"]
text = "Watch Ad"

[node name="RestartButton" type="Button" parent="Root/ExtraBulletPrompt/VBoxContainer"]
text = "Restart"

[node name="LevelSelectButton" type="Button" parent="Root/ExtraBulletPrompt/VBoxContainer"]
text = "Level Select"

[node name="MainMenuButton" type="Button" parent="Root/ExtraBulletPrompt/VBoxContainer"]
text = "Main Menu"

[node name="EndPanel" type="Panel" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -130.0
offset_right = 170.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="Root/EndPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 14.0
offset_right = -14.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Root/EndPanel/VBoxContainer"]
text = "Run Ended"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Root/EndPanel/VBoxContainer"]
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="Root/EndPanel/VBoxContainer"]
text = "Best: 0"
horizontal_alignment = 1

[node name="RewardAdButton" type="Button" parent="Root/EndPanel/VBoxContainer"]
text = "Watch Ad: +25% Reward"

[node name="RestartButton" type="Button" parent="Root/EndPanel/VBoxContainer"]
text = "Play Again"

[node name="MenuButton" type="Button" parent="Root/EndPanel/VBoxContainer"]
text = "Main Menu"

[node name="AdDebugPanel" type="Panel" parent="Root"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 62.0
offset_right = -18.0
offset_bottom = 150.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Root/AdDebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="AdDebugLabel" type="Label" parent="Root/AdDebugPanel/VBoxContainer"]
text = "Ad: loading\nExtra: ?\nEnd: ?"

[node name="DebugToast" type="Panel" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -24.0
offset_right = 80.0
offset_bottom = 24.0

[node name="MarginContainer" type="MarginContainer" parent="Root/DebugToast"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToastLabel" type="Label" parent="Root/DebugToast/MarginContainer"]
text = "Debug ON"
horizontal_alignment = 1
vertical_alignment = 1
